tests/error/def_in_if.py
if True:
    def a():
        print "hi"
